Alignments and positions has been fixed and a search bar has been added

--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,7 @@
   background-repeat:repeat;
 }
 
+.mobile {
+  background-position: center;
+  background-size: contain;
+}
